# genotype

./: .bumpversion.cfg  .editorconfig  .gitignore  .gitlint.yaml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HISTORY.md  MANIFEST.in  README.md  application.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  taboo.sublime-project  tasks.py  tox.ini
.configs/: pylintrc
.ebextensions/: 01_setup.config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workflows/: black.yml  build_and_publish.yml  build_dockerfile_on_push.yml  build_dockerfile_on_release.yml  build_docs.yml  bumpversion_on_merge_master.yml  installations.yml  server_info.md  tests_and_coverage.yml
alembic/: env.py
alembic/versions/: 21ef5ce15822_link_plate_with_analysis.py  3311cbf4b2bd_add_user_table.py  88fa93c68dab_add_plate_table.py  b1c09a577a3d_initial_structure.py
artwork/: icon.sketch
artwork/icon.sketch/: Data  metadata
docs/: README.md
docs/source/: conf.py  index.rst
genotype/: __init__.py  __main__.py  cli.py  compat.py  constants.py  log.py
local/: genotype.db
requirements/: conda.txt  development.txt
scripts/: Snakefile  deploy  fabfile.py  pipeline.rasta.sh  pipeline.sh  tasks.py
taboo/: __init__.py  __main__.py  _compat.py  cli.py  compat.py  constants.py  exc.py  log.py  match.py  rsnumbers.py  split.py  utils.py
tests/: conftest.py  test_cli.py  test_compat.py  test_rsnumbers.py  test_store.py  test_store_models.py  test_taboo.py  test_utils.py
(+209 files in other folders)
